Fix prfile header bug on Firefox mobile view

--- a/views/styles/re-edit-profile.css
+++ b/views/styles/re-edit-profile.css
@@ -1,4 +1,5 @@
 .profile-header-wrapper {
+    display: grid;
     background-color: var(--primary-light);
 }
 
@@ -56,7 +57,6 @@
     text-decoration: none;
 }
 
-
 .profile-description {
     width: 50%;
     min-width: 700px;
@@ -99,55 +99,45 @@
         justify-content: space-between;
         margin: 0 2%;
     }
-    
     .profile-picture {
         padding: 0;
         width: 200px;
         height: auto;
     }
-
     .profile-name {
         text-align: left;
         position: relative;
     }
-
     .edit-profile {
         position: absolute;
         top: 75%;
     }
-
     .profile-info {
         text-align: right;
     }
-
     .profile-info h3,
     .profile-info h4 {
         margin: .3rem 0;
         position: relative;
     }
-
     .profile-header h4:after,
     .profile-header h3:after {
         position: absolute;
         bottom: -2px;
         right: 0;
     }
-
     .profile-description {
         width: 70%;
         min-width: 300px;
         max-height: 8rem;
         transform: translateY(-5px);
     }
-
     .profile-description p {
         font-size: 1rem;
     }
-
     .post-block {
         width: 96%;
     }
-
 }
 
 @media only screen and (max-width: 599px) {
@@ -156,55 +146,46 @@
         grid-template-rows: 40% 20% 40%;
         margin: 0 2%;
     }
-    
     .profile-picture {
         padding: 0;
+        text-align: center;
         grid-row: 1 / span 1;
         width: auto;
         height: auto;
     }
-
     .profile-picture img {
         height: 100%;
         width: auto;
     }
-
     .profile-name {
         grid-row: 2 / span 1;
         text-align: center;
         position: relative;
     }
-    
     .edit-profile {
         position: absolute;
         top: 260%;
         left: 50%;
         transform: translateX(-50%);
     }
-
     .profile-info {
         grid-row: 3 / span 1;
         width: 100%;
     }
-
     .profile-info h3,
     .profile-info h4 {
         margin: .3rem 0;
     }
-
     .profile-description {
         width: 70%;
         min-width: 300px;
         max-height: 8rem;
         transform: translateY(-5px);
     }
-
     .profile-description p {
         font-size: 1rem;
     }
-
     .post-block {
         width: 96%;
     }
-
 }
